@@ -642,21 +642,15 @@ block|{
 name|char
 modifier|*
 name|proxy_host
-decl_stmt|;
-name|apr_getnameinfo
-argument_list|(
-operator|&
-name|proxy_host
-argument_list|,
+init|=
 name|conn
 operator|->
 name|ctx
 operator|->
 name|proxy_address
-argument_list|,
-literal|0
-argument_list|)
-expr_stmt|;
+operator|->
+name|hostname
+decl_stmt|;
 name|status
 operator|=
 name|gss_api_get_credentials
